--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^2.1.7",
     "@supabase/supabase-js": "^2.38.0",
-    "next": "13.5.4",
+    "next": "^13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "stripe": "^13.10.0"
   },
   "devDependencies": {
     "@types/node": "^20",
